pyarmor.error.log
15977 MainProcess 2024-11-10 09:41:43,043
Traceback (most recent call last):
  File "/opt/conda/envs/MirrorElf/lib/python3.11/site-packages/pyarmor/cli/__main__.py", line 754, in main
    main_entry(sys.argv[1:])
  File "/opt/conda/envs/MirrorElf/lib/python3.11/site-packages/pyarmor/cli/__main__.py", line 742, in main_entry
    return args.func(ctx, args)
           ^^^^^^^^^^^^^^^^^^^^
  File "/opt/conda/envs/MirrorElf/lib/python3.11/site-packages/pyarmor/cli/__main__.py", line 244, in cmd_gen
    builder.process(options)
  File "/opt/conda/envs/MirrorElf/lib/python3.11/site-packages/pyarmor/cli/generate.py", line 188, in process
    self._obfuscate_scripts()
  File "/opt/conda/envs/MirrorElf/lib/python3.11/site-packages/pyarmor/cli/generate.py", line 144, in _obfuscate_scripts
    code = Pytransform3.generate_obfuscated_script(self.ctx, r)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/conda/envs/MirrorElf/lib/python3.11/site-packages/pyarmor/cli/core/__init__.py", line 93, in generate_obfuscated_script
    return m.generate_obfuscated_script(ctx, res)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<maker>", line 716, in generate_obfuscated_script
  File "/opt/conda/envs/MirrorElf/lib/python3.11/site-packages/pyarmor/cli/__init__.py", line 16, in process
    return meth(self, res, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<maker>", line 515, in process
  File "/opt/conda/envs/MirrorElf/lib/python3.11/site-packages/pyarmor/cli/resource.py", line 144, in reparse
    self.mtree = ast.parse(''.join(lines), self.frozenname, 'exec')
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/conda/envs/MirrorElf/lib/python3.11/ast.py", line 50, in parse
    return compile(source, filename, mode, flags,
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen app.src.github>", line 8
    
    ^
IndentationError: expected an indented block after function definition on line 7
